[package]
name = "webview2-rs-experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target."cfg(target_os = \"windows\")".dependencies]
webview2-com = "0.16.0"
windows-implement = "0.37.0"

  [target."cfg(target_os = \"windows\")".dependencies.windows]
  version = "0.37.0"
  features = [
  "alloc",
  "implement",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_LibraryLoader",
  "Win32_System_Ole",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Globalization"
  
]
